# My_Homework

./: .env.example  README.md  mylog.txt  pyproject.toml
src/: decorators.py  external_api.py  generators.py  main.py  masks.py  mylog.txt  processing.py  utils.py  widget.py
tests/: mylog.txt  test_decorators.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
