[tool.poetry]
name = "nikita-osipov-dz4"
version = "0.1.0"
description = "Homework4"
authors = ["Nikita"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.10.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
mypy = "^1.10.0"
black = "^24.4.2"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119


